# rust-xp-sqlite

./: .gitignore  Cargo.toml  README.md
examples/: c01-simple.rs  c02-join.rs  c03-values.rs  c04-json.rs  c05-jsonb.rs  c06-async.rs
src/: db_utils.rs  lib.rs
